--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "crypto-js": "^4.0.0",
+    "hamburgers": "^1.1.3",
     "node-sass": "^4.14.1",
     "r": "0.0.5",
     "react": "^17.0.1",
