--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.14.1",
+    "@react-firebase/auth": "^0.2.10",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "crypto-js": "^4.0.0",
-    "hamburgers": "^1.1.3",
+    "dotenv": "^8.2.0",
+    "firebase": "^8.1.2",
     "node-sass": "^4.14.1",
     "r": "0.0.5",
     "react": "^17.0.1",
